@@ -41,9 +41,9 @@ public class ConfigStats {
 	public static final ConfigStats STATS_CONFIG = new ConfigStats();
 	
 	@Load
-	public AttackSettings floatingBlockSettings = new AttackSettings(0.25f, 1),
+	public AttackSettings floatingBlockSettings = new AttackSettings(0.45f, 1),
 			ravineSettings = new AttackSettings(7, 0.25), //
-			waveSettings = new AttackSettings(9, 6);
+			waveSettings = new AttackSettings(6, 6);
 	
 	@Load
 	public List<String> bendableBlocksNames;
