@@ -3,7 +3,10 @@ AV2 a3.0
 + Added water bubble ability
 + Added earth wall ability
 + Added /gorecore fixid, which allows you to sync UUID to online
++ Added wall-jumping for airbenders
 * Changed water skills menu background
 * Removed some unused assets
 * GoreCore's UUID cache uses CRLF line endings on windows
 * Offline/hacked support for account UUID fetching; generates random UUID
+* Flamethrower flames inherit the firebender's velocity
+> Fixed air gust not working on other players in LAN
